force-app/main/default/objects/Pricing_Condition__c/Pricing_Condition__c.object-meta.xml
<CustomObject>
    <label>Pricing Condition</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pricing Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>