force-app/main/default/objects/Pricing_Condition__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <label>Pricing Matrix</label>
    <referenceTo>Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Pricing Conditions</relationshipLabel>
    <relationshipName>Pricing_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>