force-app/main/default/objects/Pricing_Condition__c/fields/Rule_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Rule_Criteria__c</fullName>
    <label>Rule Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUALS</fullName>
            </value>
            <value>
                <fullName>NOT EQUALS</fullName>
            </value>
            <value>
                <fullName>LESS THAN</fullName>
            </value>
            <value>
                <fullName>GREATER THAN</fullName>
            </value>
            <value>
                <fullName>LESS THAN OR EQUAL</fullName>
            </value>
            <value>
                <fullName>GREATER THAN OR EQUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>